# simple-rag

./: .env  README.md  app.py  pyproject.toml  requirements.txt
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb  pdf_loader.ipynb
